--- a/src/App.css
+++ b/src/App.css
@@ -238,10 +238,12 @@
 
 .pokemon-card{
   transform: none;
+  box-shadow: 0px 0px 0px 4px rgb(174 174 174);
 }
 
 .pokemon-card img{
   max-width: 10rem;
+  transform:none;
 }
 
 }
