--- a/src/App.css
+++ b/src/App.css
@@ -7,11 +7,110 @@
   box-sizing: border-box;
 }
 
+:root{
+  
+  --dark-background-url:url("https://www.wallpapertip.com/wmimgs/46-465323_anime-landscape-forest-big-trees-water-foliage-green.jpg");
+  --background-size:100rem;
+  --night-background: url("https://fondosmil.com/fondo/36830.jpg") ;
+  --background-color:rgba(245, 245, 245, 0.61);
+  --border-color:5px  solid rgba(255, 255, 255, 0.603);
+}
+
+
+/*Dark theme*/
+body{
+  transition: 1s ease all;
+  
+}
+body.dark{
+  --background-color:rgb(0 0 0 / 61%);
+  --border-color:5px  rgb(255 255 255 / 60%);
+  --night-background: url("https://us.123rf.com/450wm/apostrophe/apostrophe1208/apostrophe120800001/14674350-fondo-negro-azul-los-colores-oscuros-con-textura-de-fondo-de-%C3%A9poca-grunge-manchas-abstractas-y-las-m.jpg?ver=6") ;
+  --dark-background-url:url("https://swordshield.pokemon.com/assets/img/screenshots/10_7_livecamera_4.jpg") ;
+  --background-size:100rem;
+  
+}
+/*Dark Theme*/
+.btn-mode{
+  position: fixed;
+  right: 0;
+  margin: 2rem;
+  transition: all ease 1s;
+
+}
+.switch{
+  background: #343d5b;
+  border-radius: 1000px;
+  border: none;
+  position: relative;
+  cursor: pointer;
+  display: flex;
+  outline: none;
+  transition: 1s ease all;
+  font-size: 2rem;
+  box-shadow: 1px 1px 50px 0px rgba(245,245,245,0.75);
+}
+
+.switch::after{
+  content: "";
+  display: block;
+  width: 40px;
+  height: 40px;
+  position: absolute;
+  background: #F1F1F1;
+  top: 0;
+  left: 0;
+  right: unset;
+  border-radius: 100px;
+  transition: 1s ease all;
+  box-shadow: 0px 0px 2px 2px rgba(0,0,0,.2);
+}
+
+.switch.active{
+  background: rgb(216, 202, 0);
+  color: #000;
+}
+
+.switch.active::after{
+  right: 0;
+  left: unset;
+  transition: 1s ease all;
+}
+
+
+.switch span{
+  width: 40px;
+  height: 40px;
+  line-height: 30px;
+  background: none;
+  color:#fff ;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  transition: all ease 1s;
+}
+
+@media screen and (max-width:600px) {
+  .btn-mode{
+    margin: 1rem;
+  }
+
+}
+
+
+
+
+
+
+/*POKEMONS*/
+
+
 .container{
   width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+  background: slategray;
 }
 
 .input-pokemons{
@@ -19,7 +118,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background: linear-gradient(180deg,#ff0000 0%, #ffffff 80%);
+  background: linear-gradient(0deg,#ffffff 50%, #dc3737 80%);
 }
 
 .type-search{
@@ -63,12 +162,12 @@
   width: 3rem;
   height: 2rem;
   cursor: pointer;
-  transition: all ease 5ms;
+  transition: all ease 1s;
 }
 
 .search-input button:hover{
-  width: 3.5rem;
-  transition: all ease 5ms;
+  transform: scale(1.3);
+  transition: all ease 1s;
 }
 
 .welcome-container{
@@ -77,14 +176,16 @@
   flex-direction: row;
   justify-content: center;
   align-items: center;
-  box-shadow: 1px 2px 12px 0px rgba(0,0,0,0.75);
-
+  background-image: url("https://www.xtrafondos.com/wallpapers/colores-vibrantes-5313.jpg");
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: cover;
 }
 
 .welcome-type{
   width: 90%;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
   justify-content: space-around;
   align-items: center;
   margin: 1rem;
@@ -92,6 +193,9 @@
 
 .welcome-type h1{
   font-family: 'Poppins', sans-serif;
+  color: whitesmoke;
+  font-size: 2.5rem;
+  text-align: center;
 }
 .welcome-type span{
   font-family: 'Work Sans', sans-serif;
@@ -100,10 +204,14 @@
 
 .welcome-type h3{
   font-family: 'Poppins', sans-serif; 
+  text-align: center;
+  font-size: 2rem;
+  text-shadow: -8px 0px 0px rgb(0 33 236 / 68%);
+  color: yellow;
 }
 
 .welcome-type select{
-  width: 8rem;
+  width: 20rem;
   height: 2rem;
   border-radius: 5px;
   font-family: 'Work Sans', sans-serif;
@@ -114,10 +222,12 @@
   background-size:contain;
   cursor: pointer;
   box-shadow: -1px 1px 8px -1px rgb(0 0 0 / 75%);
+  text-align: center;
+  font-size: 1.4rem;
 }
 
 .welcome-type select:hover{
-  background-position: 8rem 0 ;
+  background-position: 24rem 0 ;
   transition: all ease 2s;
 } 
 
@@ -138,6 +248,8 @@
   align-content: space-between;
   gap: 3rem;
   margin: 6rem;
+  border-radius: 1rem;
+  background-color: #f5f5f5;
 }
 
 
@@ -147,10 +259,9 @@
   align-items: center;
   flex-direction: column;
   transition: all 0.6s;
-  box-shadow: 20px 27px 3px 3px rgb(174 174 174);
+  box-shadow: 20px 15px 3px 3px rgb(174 174 174);
   border-radius: 1rem;
   cursor: pointer;
-  background-image: url(https://st3.depositphotos.com/9881654/35867/i/600/depositphotos_358675424-stock-photo-sea-town-seaside-beach-and.jpg);
   background-repeat: no-repeat;
   background-position: center;
   background-size: 41rem;
@@ -160,11 +271,10 @@
 
 
 .pokemon-card:hover{
-    box-shadow: 20px 20px 20px gray;
+    box-shadow:12px 12px 7px grey ;
     scale: 1.1;
-    transform: translateY(49.9%, 49.9%);
     transition: all 0.6s;
-    background-size: 45rem;
+    background-size: 50rem;
     transform: skew(4deg,0deg);
     z-index: 1;
   }
@@ -189,18 +299,18 @@
   box-shadow: -3px 2px 21px -1px rgba(0,0,0,0.75);
   width: 100%;
   border-radius: 0 0 1rem 1rem;
-  background: linear-gradient(184deg,#00ff7bd2 0%, #ffffff57 80%);
+ /* background: linear-gradient(184deg,#00ff7bd2 0%, #ffffff57 80%);*/
 }
 
 .info-card h2{
   font-family: 'Work Sans', sans-serif;
   font-weight: 700;
-  color: rgb(41, 41, 41);
+  color:whitesmoke;
   padding-left: 1.7rem;
 }
 
 .info-card p{
-  color: gray;
+  color: whitesmoke;
   font-family: 'Work Sans', sans-serif;
   padding-left: 1rem;
 }
@@ -208,7 +318,7 @@
 .info-card h3{
   font-family: 'Work Sans', sans-serif;
   font-size: 1rem;
-  color: grey;
+  color: whitesmoke;
   padding-left: 1rem;
 }
 .info-card b{
@@ -420,10 +530,10 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  background-image: url("https://www.wallpapertip.com/wmimgs/46-465323_anime-landscape-forest-big-trees-water-foliage-green.jpg");
+  background-image: var(--dark-background-url);
   background-repeat: no-repeat;
   background-position: center;
-  background-size: 100rem;
+  background-size: var(--background-size);
   transition: all ease 1s;
 }
 
@@ -433,14 +543,15 @@
 }
 
 .detail-image{
-  border-top: 5px  solid rgba(255, 255, 255, 0.603);
+  border-top: 5px  var(--border-color);
   width: 50rem;
   height: 30rem;
   border-radius: 93rem 90rem 0 0;
   display: flex;
   justify-content: center;
   margin-top: 1rem;
-  background-color: rgba(245, 245, 245, 0.61);
+  background-color: var(--background-color);
+  transition: all ease 0.10s  ;
 }
 
 
@@ -489,10 +600,11 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-image: url("https://u7.uidownload.com/vector/176/774/vector-20-blurred-background-pack-psd.jpg");
+  background-image: var(--night-background);
   background-repeat: no-repeat;
   background-position: center;
   background-size:cover;
+  transition: all ease 1s;
 }
 
 .content-details{
@@ -509,14 +621,14 @@
 .content-details h1{
   font-family: 'Poppins', sans-serif;
   font-size: 3rem;
-  color: #153a32;
+  color:whitesmoke;
   border-bottom: 1px solid gray ;
   margin-bottom: 1rem;
 }
 
 .id{
   font-family: 'Poppins', sans-serif;
-  color: gray;
+  color: whitesmoke;
   font-size: 2.3rem;
 }
 
@@ -535,6 +647,7 @@
   align-items: center;
   box-shadow: -1px 1px 8px -1px rgb(0 0 0 / 75%);
   justify-content: center;
+  background-color: whitesmoke;
 }
 
 .info-1-content h2{
@@ -565,6 +678,7 @@
   border-radius: 1rem;
   box-shadow: -1px 1px 8px -1px rgb(0 0 0 / 75%);
   margin: 2rem;
+  background-color: whitesmoke;
 }
 
 .stats-content{
@@ -616,6 +730,7 @@
   border-radius: 1rem;
   box-shadow: -1px 1px 8px -1px rgb(0 0 0 / 75%);
   margin: 2rem;
+  background-color: whitesmoke;
 }
 
 .info-2 h2{
