--- a/src/App.css
+++ b/src/App.css
@@ -481,7 +481,7 @@ body.dark{
   justify-content: flex-end;
   border-radius: 3rem;
   margin-left:10rem ;
- background-image: url("https://assets.pokemon.com//assets/cms2-es-es/img/misc/virtual-backgrounds/sword-shield/pokemon-in-the-wild.png");
+ background-image: url("https://estaticos-cdn.epe.es/clip/1e55c177-7fcd-4ee4-8ba9-f1f51c01b7a8_alta-libre-aspect-ratio_default_0.png");
   background-repeat: no-repeat;
   background-position: 0rem 0rem;
   background-size: 40rem;
