--- a/src/App.css
+++ b/src/App.css
@@ -11,7 +11,7 @@
 
   --dark-background-url: url("https://www.wallpapertip.com/wmimgs/46-465323_anime-landscape-forest-big-trees-water-foliage-green.jpg");
   --background-size: 100rem;
-  --night-background: url("https://fondosmil.com/fondo/36830.jpg");
+  --night-background: url("https://i.pinimg.com/736x/66/4b/6a/664b6af1e2428aed06246af0c6581efb.jpg");
   --background-color: rgba(245, 245, 245, 0.61);
   --border-color: 5px solid rgba(255, 255, 255, 0.603);
 }
@@ -113,7 +113,11 @@ body.dark {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background: slategray;
+  background-image: url("https://cdn.pixabay.com/photo/2020/02/16/13/08/background-4853462_960_720.jpg") ;
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+
 }
 
 .input-pokemons {
@@ -204,7 +208,8 @@ body.dark {
 
 .welcome-type span {
   font-family: 'Work Sans', sans-serif;
-  color: rgb(12 156 225);
+  color: #d4e10c;
+  text-shadow: 4px 4px 2px rgb(14 1 255 / 59%);
 }
 
 .welcome-type h3 {
@@ -213,6 +218,7 @@ body.dark {
   font-size: 2rem;
   text-shadow: -8px 0px 0px rgb(0 33 236 / 68%);
   color: yellow;
+
 }
 
 .welcome-type select {
@@ -254,7 +260,7 @@ body.dark {
   gap: 1.8rem;
   margin: 0 6rem 0 6rem;
   border-radius: 1rem;
-  background-color: #f5f5f5;
+  
 }
 
 
@@ -264,7 +270,7 @@ body.dark {
   align-items: center;
   flex-direction: column;
   transition: all 0.6s;
-  box-shadow: 20px 15px 3px 3px rgb(174 174 174);
+  box-shadow: 20px 15px 3px 3px rgba(128, 128, 128, 0.644);
   border-radius: 1rem;
   cursor: pointer;
   background-repeat: no-repeat;
@@ -310,7 +316,7 @@ body.dark {
 .info-card h2 {
   font-family: 'Work Sans', sans-serif;
   font-weight: 700;
-  color: whitesmoke;
+  color: rgb(255, 255, 255);
   padding-left: 1.7rem;
 }
 
